	have collide resulting in an undefined behavior. Critical section
	used for synchronization is initialized in _Locale_init and freed
	in _Locale_final.

	* c_locale_win32/c_locale_win32.c: Add several fields in
	_Locale_time struct to avoid use of static buffers in some locale
	support functions like _Locale_d_t_fmt _Locale_long_d_t_fmt...
	Moreover time format cannot be truncated anymore.

2007-01-08  Francois Dumont  <dums@stlport...>

	* stlport/stl/_deque.c: Patch from Kevin Lin to fix iterator
	returned by insert at position method.

	* test/unit/deque_test.cpp: Add test case for the deque::insert
	methods.

2006-11-27  Francois Dumont  <dums@stlport...>

	* stlport/stl/config/_windows.h: Patch from Michael Fink to check
	inclusion of winbase.h and windows.h.

2006-11-24  Francois Dumont  <dums@stlport...>

        * stlport/stl/_fstream.h, src/fstream.cpp, iostream.cpp: Restore
        computation of the system dependant page size that was hardcoded
        to 4096. Initialisation code has been moved to a static method
        called just after Standard iostream initialisation. This code used
        to be in the _Filebuf_base constructor that might have been called
        simultaneously by several threads.

2006-11-17  Francois Dumont  <dums@stlport...>

	* stlport/stl/config/_macosx.h: Add endianess configuration.

2006-11-16  Francois Dumont  <dums@stlport...>

	* test/unit/resolve_name.cpp: Clean most of MSVC6 workaround, only
	one has been kept to have the test pass.

2006-11-13  Francois Dumont  <dums@stlport...>

	* stlport/stl/_cwchar.h: Patch from Michael Fink to fix EVC3
	missing mbstate_t definition.

2006-11-07  Francois Dumont  <dums@stlport...>

	* stlport/stl/_threads.h: Removed _Atomic_swap_struct export
	that should be useless as completely inlined. Moreover it was
	generating a compilation error using MSVC 2005 under Windows
	64 bits.

2006-10-26  Francois Dumont  <dums@stlport...>
